fixed extra padding

--- a/assets/style.css
+++ b/assets/style.css
@@ -190,7 +190,7 @@
     position: relative;
     min-height: 40vh;
     background-color: #14afa2;
-    padding: 40px;
+    padding: 25px;
     color: #ffffff;
 }
 .footer span.social {
